--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         <form class = "js-todo">
             <input type = "text" style="font-size:25px;" placeholder="Write things to do here!">
         </form>
-        <ul class = "js-list">
-        </ul>
+        <div class = "center-align">
+            <ul class = "js-list">
+            </ul>
+        </div>
 
 
         
